# mental-health-checker

./: requirements.txt
mental health checker/: .env  .gitignore  pyproject.toml
mental health checker/src/: main.py
mental health checker/src/mental_health_checker/: __init__.py
